--- a/src/components/ToastMessage/toastMessage.css
+++ b/src/components/ToastMessage/toastMessage.css
@@ -89,7 +89,7 @@
 
 /* Remove toast message on smaller screens */
 
-@media (max-width: 800px) {
+@media (max-width: 1200px) {
 	.toast-message {
 		display: none;
 	}
