--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,8 @@
 	--primary-clr: #ec4c69;
 	--panel-clr: #ffffff;
 	--inverted-font-clr: #ffffff;
+
+	--breakpoint: 1200px;
 }
 
 * {
@@ -17,7 +19,7 @@
 
 main {
 	min-height: 100vh;
-	width: 100vw;
+	max-width: 100vw;
 	background: var(--background-clr);
 	color: var(--font-clr);
 	display: flex;
@@ -65,7 +67,7 @@ main {
 	flex: 1;
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: 1fr 1fr;
+	grid-template-rows: auto auto;
 	align-self: center;
 	gap: 20px;
 }
@@ -94,6 +96,33 @@ main {
 .hourly-panel {
 	grid-row: 1 / -1;
 	grid-column: 5 / -1;
+}
+
+@media (max-width: 1200px) {
+	.dashboard {
+		grid-template-rows: repeat(3, auto);
+		grid-template-columns: 1fr 1fr;
+	}
+
+	.current-panel {
+		grid-row: 1 / 2;
+		grid-column: 1 / 2;
+	}
+
+	.conditions-panel {
+		grid-row: 1 / 2;
+		grid-column: 2 / 3;
+	}
+
+	.hourly-panel {
+		grid-row: 2 / 3;
+		grid-column: 1 / -1;
+	}
+
+	.weekly-panel {
+		grid-row: 3 / 4;
+		grid-column: 1 / -1;
+	}
 }
 
 @media (max-width: 800px) {
